# rymovadlo

./: .gitignore  .tlycode-settings.json  CLAUDE.md  README.md  verse-search
.agents/skills/: prebasni
.claude/: settings.json
.claude/skills/prebasni/: SKILL.md
.gemini/commands/: prebasni.toml
tools/ccv-to-sql/: build.py
tools/ccv-to-sql/out_test/data/: data_authors.sql  data_books.sql  data_poems.sql  data_rhymes.sql  data_stanzas.sql  data_tokens.sql  data_verses.sql
tools/ccv-to-sql/out_test/schema/: indexes.sql  schema.sql  sequences.sql
tools/verse-search/: Cargo.toml
tools/verse-search-sql/: Cargo.toml  perf_indexes.sql
tools/verse-search-sql/src/: main.rs
tools/verse-search/src/: main.rs
